# RutherfordScattering

./: CMakeLists.txt  LICENSE  RuScat.cc  RuScatAna.C  vis.mac
include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyPhysicsList.hh  MyPrimaryGeneratorAction.hh  MyRunAction.hh  MySensitiveDetector.hh
src/: MyActionInitialization.cc  MyDetectorConstruction.cc  MyPhysicsList.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MySensitiveDetector.cc
